--- a/package.json
+++ b/package.json
@@ -3,13 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "apexcharts": "^3.45.0",
+    "axios": "^1.1.2",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "date-fns": "^2.30.0",
+    "vue": "^2.6.14",
+    "vue-apexcharts": "^1.6.2",
+    "vue-router": "^3.4.5",
+    "vue-toasted": "^1.1.28",
+    "vue2-datepicker": "^3.11.1",
+    "vuetify": "^2.6.11",
+    "vuex": "3.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -17,9 +26,14 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "babel-eslint": "^10.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "vue-template-compiler": "^2.6.14"
+    "sass": "~1.32.0",
+    "sass-loader": "^10.0.0",
+    "vue-cli-plugin-vuetify": "~2.5.8",
+    "vue-template-compiler": "^2.6.14",
+    "vuetify-loader": "^1.7.0"
   },
   "eslintConfig": {
     "root": true,
@@ -33,7 +47,9 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "vue/multi-word-component-names": "off"
+    }
   },
   "browserslist": [
     "> 1%",
