--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
+VUE_APP_LEAGUES_API='http://localhost:3001/api/leagues'
 VUE_APP_FIXTURES_API='http://localhost:3004/api/fixtures'
 VUE_APP_BACKTEST_API='http://localhost:3005/api/backtest'
+VUE_APP_PUNTER_API='http://localhost:3006/api/punter'
